--- a/site/collections/_posts/2017-06-19-ndc-oslo-2017.md
+++ b/site/collections/_posts/2017-06-19-ndc-oslo-2017.md
@@ -22,7 +22,7 @@ tags: ['2017']
 ### How it began
 
 After having a brilliant time volunteering at NDC London earlier this year
-<a href="{{ site.baseurl }}/blog/ndclondon-post/" rel="noreferrer" target="_blank">blog post here</a> I snatched the chance to volunteer at Oslo. Moreton and I booked our flights and hotel, packed our bags and headed to Norway.
+<a href="{{ site.baseurl }}/blog/ndc-london/" rel="noreferrer" target="_blank">blog post here</a> I snatched the chance to volunteer at Oslo. Moreton and I booked our flights and hotel, packed our bags and headed to Norway.
 
 We woke at 3am and after travelling on many trains, planes and automobiles, finally arrived in Oslo, the birth place of NDC. After a quick snack it was time to find out more about what being a volunteer would involve.
 
